# ScriptGeometry

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: architecture.md  capi_factory_reference.md  entity_transform.md  mvp_roadmap.md  technical_guide.md  update_stl_json_ui.md  脚本编写指南.md
include/: capi.h  chat.h  geolib.h  glview.h  mainwindow.h  scriptlib.h  tccengine.h  toon.h
scripts/: boolean_union_demo.toon  box.toon  cone.toon  gear.toon  helix.toon  offset_demo.toon  polygon_fill_demo.toon  sphere.toon  star.toon  torus.toon
shaders/: solid.frag  solid.vert  wire.vert
src/: capi.cpp  chat.cpp  geolib.cpp  glview.cpp  main.cpp  mainwindow.cpp  scriptlib.cpp  tccengine.cpp  toon.cpp
